--- a/job.html
+++ b/job.html
@@ -10,7 +10,7 @@
 
 <body>
     <video autoplay loop muted class="background-video">
-        <source src="video/Abstract Daily Motivation Quote Background Video.mp4" type="video/mp4">
+        <source src="Video/Abstract Daily Motivation Quote Background Video.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
     <nav class="header">
