--- a/job.html
+++ b/job.html
@@ -15,7 +15,7 @@
     </video>
     <nav class="header">
         <ul id="navList">
-            <li><img src="IMG/Logo.png" alt="Logo"></li>
+            <li><img src="Img/Logo.png" alt="Logo"></li>
             <li><a href="index.html">HOME</a></li>
             <li><a href="job.html">CAREER PATH FINDER</a></li>
             <li><a href="degree-finder.html">DEGREE FINDER</a></li>
